Adding Past Events

--- a/website.html
+++ b/website.html
@@ -19,6 +19,16 @@
     <p>Fridays: 11am - 12pm</p>
     
   <h2>Past Events</h2>
-    <p>
+    <h3>Terraniums</h3>
+      <p>Provided students with free glass jars, plants, and decorations so they
+      could customize their own terraniums</p>
+    <h3>Plastic Water Bottles</h3>
+      <p>Provided students with plants and showed them how they could turn their
+      used plastic water bottle into a pot</p>
+    <h3>FARM</h3>
+      <p>Collaborated with Warren Writing 10B by bringing multiple speakers to
+      educate students about food insecurity and different solutions to this
+      problem. This gave students great resources for their papers as well as a
+      chance to earn extra credit.</p>
 
 </html>
