Adding css file

--- a/website.html
+++ b/website.html
@@ -1,34 +1,51 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <title>Warren Grow!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="/website.css" media="screen"/>
 </head>
 
-<h1>Warren Grow!</h1>
+<body>
+  <div>
+    <h1>Warren Grow!</h1>
+  </div>
 
-  <h2>Mission</h2>
+  <div>
+    <h2>Mission</h2>
+  </div>
 
-  <h2>Location</h2>
-    <p>Between the Warren Student Activity Center</p>
-
-  <h2>Workdays</h2>
-    <p>Tuesdays: 9am -11am</p>
-    <p>Fridays: 3pm -5pm</p>
-
-  <h2>Meetings</h2>
-    <p>Fridays: 11am - 12pm</p>
+  <div>
+    <h2>Location</h2>
+      <p>Between the Warren Student Activity Center and Goldberg Hall</p>
+  </div>
     
-  <h2>Past Events</h2>
-    <h3>Terraniums</h3>
-      <p>Provided students with free glass jars, plants, and decorations so they
-      could customize their own terraniums</p>
-    <h3>Plastic Water Bottles</h3>
-      <p>Provided students with plants and showed them how they could turn their
-      used plastic water bottle into a pot</p>
-    <h3>FARM</h3>
-      <p>Collaborated with Warren Writing 10B by bringing multiple speakers to
+  <div>
+    <h2>Workdays</h2>
+      <p>Tuesdays: 9am -11am</p>
+      <p>Fridays: 3pm -5pm</p>
+  </div>
+
+  <div>
+    <h2>Meetings</h2>
+      <p>Fridays: 11am - 12pm</p>
+  </div>
+
+  <div>
+    <h2>Past Events</h2>
+      <h3>Terraniums</h3>
+        <p>Provided students with free glass jars, plants, and decorations so they could customize their own terraniums</p>
+      <h3>Plastic Water Bottles</h3>
+        <p>Provided students with plants and showed them how they could turn their used plastic water bottle into a pot</p>
+      <h3>FARM</h3>
+        <p>Collaborated with Warren Writing 10B by bringing multiple speakers to
       educate students about food insecurity and different solutions to this
       problem. This gave students great resources for their papers as well as a
       chance to earn extra credit.</p>
+  </div>
+
+</body>
 
 </html>
