--- a/website.html
+++ b/website.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
-  <title>Warren Grow!</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/website.css" media="screen"/>
-</head>
+  <head>
+    <title>Warren Grow!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="website.css" media="screen"/>
+  </head>
 
-<body>
-  <div>
-    <h1>Warren Grow!</h1>
-  </div>
+  <body>
+    <div>
+      <h1 id="title">Warren Grow!</h1>
+      <figure>
+        <img src="Oranges.JPG" alt="Oranges">
+      </figure>
+    </div>
 
-  <div>
-    <h2>Mission</h2>
-  </div>
+    <div>
+      <h2>Mission</h2>
+    </div>
 
-  <div>
-    <h2>Location</h2>
-      <p>Between the Warren Student Activity Center and Goldberg Hall</p>
-  </div>
+    <div>
+      <h2>Location</h2>
+        <p>Between the Warren Student Activity Center and Goldberg Hall</p>
+    </div>
     
-  <div>
-    <h2>Workdays</h2>
-      <p>Tuesdays: 9am -11am</p>
-      <p>Fridays: 3pm -5pm</p>
-  </div>
+    <div>
+      <h2>Workdays</h2>
+        <p>Tuesdays: 9am -11am</p>
+        <p>Fridays: 3pm -5pm</p>
+    </div>
 
-  <div>
-    <h2>Meetings</h2>
-      <p>Fridays: 11am - 12pm</p>
-  </div>
+    <div>
+      <h2>Meetings</h2>
+        <p>Fridays: 11am - 12pm</p>
+    </div>
 
-  <div>
-    <h2>Past Events</h2>
-      <h3>Terraniums</h3>
-        <p>Provided students with free glass jars, plants, and decorations so they could customize their own terraniums</p>
-      <h3>Plastic Water Bottles</h3>
+    <div>
+      <h2>Past Events</h2>
+        <h3>Terraniums</h3>
+          <p>Provided students with free glass jars, plants, and decorations so they could customize their own terraniums</p>
+        <h3>Plastic Water Bottles</h3>
         <p>Provided students with plants and showed them how they could turn their used plastic water bottle into a pot</p>
-      <h3>FARM</h3>
-        <p>Collaborated with Warren Writing 10B by bringing multiple speakers to
+        <h3>FARM</h3>
+          <p>Collaborated with Warren Writing 10B by bringing multiple speakers to
       educate students about food insecurity and different solutions to this
       problem. This gave students great resources for their papers as well as a
       chance to earn extra credit.</p>
-  </div>
+    </div>
 
-</body>
+  </body>
 
 </html>
